Adjustments for 8u
remove reference to pids controller

remove os namespacing of fopen

replace log_debug with tty->print_cr

Signed-off-by: Jonathan Dowland <jdowland@redhat.com>